# zero2prod

./: .env  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  MODULE.bazel  configuration.yaml  spec.yaml
.githooks/: pre-commit
.github/workflows/: general.yml
.sqlx/: query-0ffb0dcdb6f8b6554f9a9f99452654028906bb0e12012af7b8c741b689cccab8.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domains/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
