[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.15"

[dependencies.sqlx]
version= "0.8.3"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", default-features = false, features = ["clock"]  }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
