[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "zero2prod"

[dev-dependencies]
claims = "0.8.0"
reqwest = "0.12.15"

[dependencies.sqlx]
version= "0.8.3"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", default-features = false, features = ["clock"]  }
config = "0.15.11"
log = "0.4.27"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.20.0"
