###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "zero2prod",
    version = "0.1.0",
)
bazel_dep(name = "rules_rust", version = "0.59.2")
bazel_dep(name = "rules_cc", version = "0.0.1")